<resources>
    <string name="app_name">My Ideal Weight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="application_options">Application Options</string>
    <string name="developer_email">zovalle@gmail.com</string>

    <string name="my_current_values">My current values</string>
    <string name="input_age">age</string>
    <string name="input_height">height</string>
    <string name="input_weight">weight</string>
    <string name="input_male">Male</string>
    <string name="input_female">Female</string>
    <string name="input_get_results">Get Results</string>
    <string name="validator_is_required">is required.</string>
    <string name="validator_positive_value">should be greater than zero.</string>
    <string name="label_my_current_data">My Current Data</string>
    <string name="unit_kilogram">Kilogram</string>
    <string name="unit_pound">Pound</string>
    <string name="unit_meter">Meter</string>
    <string name="unit_feet">Feet</string>
    <string name="unit_centimeter">Centimeter</string>
    <string name="validator_gender">You should specify your gender.</string>
    <string name="app_child_about">About</string>
    <string name="app_child_results">Results</string>
    <string name="app_child_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="app_child_history">History</string>
    <string name="label_result">Result</string>
    <string name="label_method">Method</string>
    <string name="label_share_message">Share my results with</string>
    <string name="label_imc_level_1">Very severely underweight</string>
    <string name="label_imc_level_2">Severely underweight</string>
    <string name="label_imc_level_3">Underweight</string>
    <string name="label_imc_level_4">Normal (healthy weight)</string>
    <string name="label_imc_level_5">Overweight</string>
    <string name="label_imc_level_6">Moderately obese</string>
    <string name="label_imc_level_7">Severely obese</string>
    <string name="label_imc_level_8">Very severely obese</string>
    <string name="label_value">Value</string>
    <string name="label_imc_method">Body Mass Index</string>
    <string name="label_share_subject">Check my ideal weight</string>
    <string name="label_pref_save_queries">Store results in database</string>
    <string name="pref_store_results_in_db">Store results in the database</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_language">Language</string>
    <string name="pref_app_language">Application language</string>
    <string name="label_about">Calculate your ideal weight based on height, weight, age and gender using different methods.</string>
    <string name="label_authtor">Author: Zobiesky Ovalle</string>
</resources>
