<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androidbasico.myidealweight.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_my_current_data"
        style="@style/Base.TextAppearance.AppCompat.Large"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:divider="@drawable/divider"
        android:showDividers="middle">
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/input_height"
                    android:drawableLeft="@drawable/ic_input_height"
                    android:drawablePadding="8dp"
                    android:paddingRight="20dp"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/spinner_height_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>
        </TableRow>
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_weight"
                    android:drawableLeft="@drawable/ic_input_weight"
                    android:drawablePadding="8dp"
                    android:paddingRight="20dp"/>
            </android.support.design.widget.TextInputLayout>
            <Spinner
                android:id="@+id/spinner_weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>
        </TableRow>
        <TableRow
            android:gravity="center_vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.6">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_age"
                    android:drawableLeft="@drawable/ic_input_age"
                    android:drawablePadding="8dp" />
            </android.support.design.widget.TextInputLayout>
            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right"
                android:paddingLeft="16dp"
                android:layout_weight="0.4">
                <RadioButton
                    android:id="@+id/radio_button_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:text="@string/input_male"
                    android:drawableRight="@drawable/ic_input_gender_man"/>
                <RadioButton
                    android:id="@+id/radio_button_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:text="@string/input_female"
                    android:drawableRight="@drawable/ic_input_gender_woman"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_get_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_get_results"
        style="@style/CustomActionButton"
        android:background="@drawable/ripple_effect"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
</LinearLayout>
