<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.androidbasico.myidealweight.activities.ResultsActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_results"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:scaleType="fitXY"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="10dp">
            <TableRow
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:text="@string/label_method"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1.3"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:text="@string/label_value"/>
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:text="Lorentz"/>
                <TextView
                    android:id="@+id/text_view_result_lorentz"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1.3" />
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:background="#CCCCFF"
                    android:text="Broca"/>
                <TextView
                    android:id="@+id/text_view_result_broca"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="#CCCCFF"
                    android:layout_weight="1.3"/>
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:text="MetLife"/>
                <TextView
                    android:id="@+id/text_view_result_metlife"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1.3"/>
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:background="#CCCCFF"
                    android:text="Perrault"/>
                <TextView
                    android:id="@+id/text_view_result_perrault"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="#CCCCFF"
                    android:layout_weight="1.3" />
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Wan der vael"
                    android:layout_weight="0.7" />
                <TextView
                    android:id="@+id/text_view_result_wandervael"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1.3" />
            </TableRow>
            <TableRow
                android:minHeight="25dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/label_imc_method"
                    android:background="#CCCCFF"
                    android:layout_weight="0.7" />
                <TextView
                    android:id="@+id/text_view_result_imc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="#CCCCFF"
                    android:layout_weight="1.3" />
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
